--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,13 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
     <servlet>
-        <servlet-name>login</servlet-name>
-        <servlet-class>app.servlets.LoginServlet</servlet-class>
+        <servlet-name>Controller</servlet-name>
+        <servlet-class>app.controller.Controller</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>login</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern>/Controller</url-pattern>
     </servlet-mapping>
+
 </web-app>
