--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver = com.mysql.cj.jdbc.Driver
-db.url =jdbc:mysql://127.0.0.1/hospital?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+db.url =jdbc:mysql://127.0.0.1/hospital?serverTimezone=Europe/Minsk&useSSL=false
 db.user = root
 db.password = password
 db.poolsize = 5
